fit in progress

--- a/hw_04.ipynb
+++ b/hw_04.ipynb
@@ -348,16 +348,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EPOCHS = 2\n",
+    "BATCH_SIZE = 32\n",
+    "INP_SIZE = 32*5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "1c-9GNjZJiAd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-12-09 11:03:41.463580: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
-    "train_ds = COCO_dataset_train.train_dataset(epochs=2, inp_size=256, batch_size=32)\n",
-    "val_ds = COCO_dataset_val.val_dataset(inp_size=256, batch_size=32)"
+    "train_ds = COCO_dataset_train.train_dataset(epochs=EPOCHS, inp_size=INP_SIZE, batch_size=BATCH_SIZE)\n",
+    "val_ds = COCO_dataset_val.val_dataset(inp_size=INP_SIZE, batch_size=BATCH_SIZE)"
    ]
   },
   {
@@ -369,13 +389,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# U-Net\n",
     "def build_model():\n",
-    "    x = tf.keras.layers.Input((256, 256, 3))\n",
+    "    x = tf.keras.layers.Input((INP_SIZE, INP_SIZE, 3))\n",
     "    \n",
     "    out = tf.keras.layers.Conv2D(64, (3, 3), padding='same', activation='relu')(x)\n",
     "    out1 = tf.keras.layers.Conv2D(64, (3, 3), padding='same', activation='relu')(out)\n",
@@ -437,24 +457,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n"
+     ]
+    }
+   ],
    "source": [
     "NUM_EPOCHS = 100\n",
-    "BATCH_SIZE = 1\n",
+    "BATCH_SIZE = 32\n",
     "\n",
     "loss = tf.keras.losses.BinaryCrossentropy()\n",
     "model.compile(optimizer='adam', loss=loss)\n",
     "\n",
-    "hist = model.fit(train_x, train_y, batch_size=BATCH_SIZE, epochs=NUM_EPOCHS)\n",
+    "history = model.fit(train_ds,\n",
+    "                    epochs=EPOCHS,\n",
+    "                    steps_per_epoch=len(COCO_dataset_train.img_list)//BATCH_SIZE, \n",
+    "                    validation_data=val_ds, \n",
+    "                    validation_steps=10)\n",
     "\n",
     "plt.plot(hist.history['loss'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Пример результата сегментации"
    ]
   },
   {
@@ -462,10 +487,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "out = model.predict(img[None, ...])[0, ...]\n",
-    "_=plt.imshow(out[...,0])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
